Add: handling participant column of expense lists
