# docs/swagger.json
@@ -155,11 +155,31 @@
                 "id": {
                     "type": "string"
                 },
+                "participants": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Participant"
+                    }
+                },
                 "title": {
                     "type": "string"
                 },
                 "totalCost": {
                     "type": "number"
+                }
+            }
+        },
+        "models.Participant": {
+            "type": "object",
+            "properties": {
+                "avatarUrl": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
                 }
             }
         }
