# models/participant.go
@@ -1,0 +1,7 @@
+package models
+
+type Participant struct {
+	ID        string `json:"id"`
+	Name      string `json:"name"`
+	AvatarUrl string `json:"avatarUrl"`
+}
